Removendo warnings do Lint
new Integer(a) => Integer.valueOf(a)
new Double(a) => Double.valueOf(a)